--- a/freeform.html
+++ b/freeform.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>DCについて(選択式)</title>
+    <title>DCについて(記述式)</title>
 </head>
 <body>
     <div id = "MainDiv">
         <div id = "introduction">
-            <h1>4択の問題です。</h1>
-            <p>画面に表示される問題・質問をよく読み、ご自身が正解だと思う選択肢を選んでください。</p>
+            <h1>自由記述です。</h1>
+            <p>画面に表示される問題・質問に対し、ご自由にご記入ください。。</p>
         </div>
         <div id = "inputForms">
             <input id="freeInput" type="text">
@@ -19,7 +19,7 @@
         </div>
     </div>
     <div id = "CompDiv">
-        <h1>ご回答ありがとうございます！<br>結果発表まで少々お待ちください。</h1>
+        <h1>ありがとうございます！<br>前方スクリーンをご覧ください。</h1>
     </div>
 
     <script src="script.js"></script>
