--- a/choose.html
+++ b/choose.html
@@ -11,7 +11,7 @@
     <div id = "MainDiv">
         <div id = "introduction">
             <h1>4択の問題です。</h1>
-            <p>画面に表示される問題・質問をよく読み、ご自身が正解だと思う選択肢を選んでください。</p>
+            <p>画面に表示される問題・質問をお読みいただき、ご自身がこれだ！と思う選択肢を選んでください。</p>
         </div>
         <div id="inputForms">
             <button onclick="clicked(0)">①</button>
